<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_1"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/kurang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kurang"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/kali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kali"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            />
        <Button
            android:id="@+id/bagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bagi"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="24sp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:textSize="24sp"
            android:paddingLeft="12dp"
            android:background="@drawable/border"
            android:textColor="#000000"
            />
    </LinearLayout>
</LinearLayout>